--- a/backend/package.json
+++ b/backend/package.json
@@ -20,9 +20,12 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@fastify/cookie": "^8.3.0",
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/jwt": "^10.0.3",
     "@nestjs/platform-express": "^9.4.0",
+    "@nestjs/platform-fastify": "^9.4.0",
     "axios": "^1.3.5",
     "dotenv": "^16.0.3",
     "reflect-metadata": "^0.1.13",
