--- a/backend/package.json
+++ b/backend/package.json
@@ -26,18 +26,21 @@
     "@nestjs/jwt": "^10.0.3",
     "@nestjs/platform-express": "^9.4.0",
     "@nestjs/platform-fastify": "^9.4.0",
+    "@nestjs/typeorm": "^9.0.1",
     "axios": "^1.3.5",
     "dotenv": "^16.0.3",
+    "pg": "^8.10.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "typeorm": "^0.3.15"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
     "@types/express": "^4.17.13",
-    "@types/jest": "29.5.0",
-    "@types/node": "18.15.11",
+    "@types/jest": "^29.5.0",
+    "@types/node": "^18.15.11",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
