--- a/backend/package.json
+++ b/backend/package.json
@@ -26,13 +26,11 @@
     "@nestjs/jwt": "^10.0.3",
     "@nestjs/platform-express": "^9.4.0",
     "@nestjs/platform-fastify": "^9.4.0",
-    "@nestjs/typeorm": "^9.0.1",
-    "axios": "^1.3.5",
+    "@prisma/client": "^4.13.0",
+    "axios": "^1.3.6",
     "dotenv": "^16.0.3",
-    "pg": "^8.10.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.2.0",
-    "typeorm": "^0.3.15"
+    "rxjs": "^7.2.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
@@ -49,6 +47,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "29.5.0",
     "prettier": "^2.3.2",
+    "prisma": "^4.13.0",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
     "ts-jest": "29.0.5",
