--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "rollup -c",
+    "build": "env-cmd .env rollup -c",
     "dev": "rollup -c -w",
     "start": "sirv public --no-clear"
   },
