--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,11 +1,48 @@
-FROM node:14.16.0-alpine3.13
+###################
+# BUILD FOR LOCAL DEVELOPMENT
+###################
 
-RUN mkdir /app
+FROM node:18-alpine As development
 
-WORKDIR /app
+WORKDIR /usr/src/app
 
-COPY package*.json ./
+COPY --chown=node:node package*.json ./
 
-COPY . .
+RUN npm ci
 
-CMD ["npm", "run", "start:dev"]
+COPY --chown=node:node . .
+
+USER node
+
+###################
+# BUILD FOR PRODUCTION
+###################
+
+FROM node:18-alpine As build
+
+WORKDIR /usr/src/app
+
+COPY --chown=node:node package*.json ./
+
+COPY --chown=node:node --from=development /usr/src/app/node_modules ./node_modules
+
+COPY --chown=node:node . .
+
+RUN npm run build
+
+ENV NODE_ENV production
+
+RUN npm ci --only=production && npm cache clean --force
+
+USER node
+
+###################
+# PRODUCTION
+###################
+
+FROM node:18-alpine As production
+
+COPY --chown=node:node --from=build /usr/src/app/node_modules ./node_modules
+COPY --chown=node:node --from=build /usr/src/app/dist ./dist
+
+CMD [ "npm", "run", "start", "dev" ]
