--- a/backend/package.json
+++ b/backend/package.json
@@ -26,7 +26,10 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/jwt": "^10.0.3",
     "@nestjs/platform-fastify": "^9.4.0",
+    "@nestjs/platform-socket.io": "^9.4.0",
+    "@nestjs/websockets": "^9.4.0",
     "@prisma/client": "^4.13.0",
+    "@types/socket.io": "^3.0.2",
     "axios": "^1.3.6",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
