--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,8 @@
   },
   "dependencies": {
     "sirv-cli": "^2.0.0",
+    "socket.io": "^4.6.1",
+    "socket.io-client": "^4.6.1",
     "svelte-navigator": "^3.2.2"
   }
 }
