--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     env_file:
       - ./backend/.env
     ports:
-      - "7001:5432"
+      - "${PORT_DB}:5432"
     environment:
       POSTGRES_USER: postgres
       POSTGRES_DB: ft_transcendence
