--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@rollup/plugin-commonjs": "^24.0.0",
     "@rollup/plugin-node-resolve": "^15.0.0",
     "@rollup/plugin-terser": "^0.4.0",
+    "@types/bcrypt": "^5.0.0",
     "rollup": "^3.15.0",
     "rollup-plugin-css-only": "^4.3.0",
     "rollup-plugin-livereload": "^2.0.0",
@@ -19,6 +20,7 @@
     "svelte": "^3.55.0"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "sirv-cli": "^2.0.0",
     "socket.io": "^4.6.1",
     "socket.io-client": "^4.6.1",
