--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,10 +5,21 @@ services:
     env_file:
       - ./backend/.env
     ports:
-      - "${PORT_DB}:5432"
+      - "7001:5432"
     environment:
       POSTGRES_USER: postgres
       POSTGRES_DB: ft_transcendence
       POSTGRES_PASSWORD: 123
+  backend:
+    container_name: backend
+    image: ft_transc:1.0.0
+    ports:
+      - "3000:3000"
+    depends_on:
+      - database
+  frontend:
+    build: ./frontend
+    ports:
+      - "8080:8080"
 networks:
   peterPan:
