--- a/backend/package.json
+++ b/backend/package.json
@@ -37,6 +37,8 @@
         "cors": "^2.8.5",
         "dotenv": "^16.0.3",
         "multer": "^1.4.5-lts.1",
+        "otplib": "^12.0.1",
+        "qrcode": "^1.5.3",
         "reflect-metadata": "^0.1.13",
         "rxjs": "^7.2.0"
     },
