--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "svelte": "^3.55.0"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "sirv-cli": "^2.0.0",
     "socket.io": "^4.6.1",
