--- a/backend/package.json
+++ b/backend/package.json
@@ -36,6 +36,7 @@
         "class-validator": "^0.14.0",
         "cors": "^2.8.5",
         "dotenv": "^16.0.3",
+        "fastify-cors": "^6.1.0",
         "multer": "^1.4.5-lts.1",
         "otplib": "^12.0.1",
         "qrcode": "^1.5.3",
