--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
+    "fastify-cors": "^6.1.0",
     "sirv-cli": "^2.0.0",
     "socket.io": "^4.6.1",
     "socket.io-client": "^4.6.1",
