--- a/backend/package.json
+++ b/backend/package.json
@@ -21,14 +21,18 @@
     },
     "dependencies": {
         "@fastify/cookie": "^8.3.0",
+        "@fastify/multipart": "^7.6.0",
         "@nestjs/common": "^9.0.0",
         "@nestjs/config": "^2.3.1",
         "@nestjs/core": "^9.0.0",
         "@nestjs/jwt": "^10.0.3",
-        "@nestjs/platform-fastify": "^9.4.0",
+        "@nestjs/platform-express": "^9.4.1",
+        "@nestjs/platform-fastify": "^9.4.1",
         "@nestjs/platform-socket.io": "^9.4.0",
         "@nestjs/websockets": "^9.4.0",
         "@prisma/client": "^4.13.0",
+        "@types/md5": "^2.3.2",
+        "@types/pump": "^1.1.1",
         "@types/socket.io": "^3.0.2",
         "axios": "^1.3.6",
         "bcrypt": "^5.1.0",
@@ -36,9 +40,15 @@
         "class-validator": "^0.14.0",
         "cors": "^2.8.5",
         "dotenv": "^16.0.3",
+        "fastify": "^4.17.0",
         "fastify-cors": "^6.1.0",
+        "fastify-formbody": "^5.3.0",
+        "fastify-multer": "^2.0.3",
+        "fastify-multipart": "^5.4.0",
+        "md5": "^2.3.0",
         "multer": "^1.4.5-lts.1",
         "otplib": "^12.0.1",
+        "pump": "^3.0.0",
         "qrcode": "^1.5.3",
         "reflect-metadata": "^0.1.13",
         "rxjs": "^7.2.0"
