--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
+    "dotenv": "^16.1.4",
     "fastify-cors": "^6.1.0",
     "fastify-formbody": "^5.3.0",
     "fastify-multipart": "^5.4.0",
