--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -7,16 +7,17 @@ ENV HOSTNAME ${HOSTNAME}
 WORKDIR /app
 
 # copy everything to the container
-COPY . .
 
 RUN npm install -g npm@latest
 RUN npm install
 
 # clean install all dependencies
-RUN npm ci
-RUN npm audit fix
+# RUN npm ci
+# RUN npm audit fix
 
 # build SvelteKit app
-RUN npm run build
+# RUN npm run build
 
-CMD ["node", "build/index.js"]
+# CMD ["node", "build/index.js"]
+
+ENTRYPOINT [ "npm", "run", "dev" ]
