--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,13 +2,12 @@ FROM node:18
 
 WORKDIR /app
 
-COPY . .
 
 RUN npm install -g npm@latest
 RUN npm install
 
-RUN npm run build
+# RUN npm run build
 # If you are building your code for production
-RUN npm ci --omit=dev
+# RUN npm ci --omit=dev 
 
 CMD [ "/bin/bash", "entrypoint.sh" ]
