--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,10 +11,11 @@ services:
       POSTGRES_DB: ft_transcendence
       POSTGRES_PASSWORD: 123
   backend:
-    container_name: backend
-    image: ft_transc:1.0.0
+    build:
+      context: ./backend
+      dockerfile: Dockerfile
     ports:
-      - "3000:3000"
+      - 3000:3000
     depends_on:
       - database
   frontend:
