--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -3,8 +3,8 @@ FROM node:18
 
 RUN apt update && apt upgrade -y
 
-ARG SECRET_TEST_FRT
-ENV SECRET_TEST_FRT ${SECRET_TEST_FRT}
+ARG HOSTNAME
+ENV HOSTNAME ${HOSTNAME}
 
 WORKDIR /app
 
