--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,6 +36,7 @@
 		"@types/socket.io-client": "^3.0.0",
 		"axios": "^1.4.0",
 		"cookies": "^0.8.0",
-		"socket.io-client": "^4.7.1"
+		"socket.io-client": "^4.7.1",
+		"svelte-spa-router": "^3.3.0"
 	}
 }
