--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,7 +4,7 @@ WORKDIR /app
 
 
 RUN npm install -g npm@latest
-RUN npm install
+# RUN npm install
 
 # RUN npm run build
 # If you are building your code for production
