--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,6 +38,7 @@
 		"colyseus": "^0.15.5",
 		"colyseus.js": "^0.15.10",
 		"cookies": "^0.8.0",
-		"socket.io-client": "^4.7.1"
+		"socket.io-client": "^4.7.1",
+		"svelte-spa-router": "^3.3.0"
 	}
 }
