--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -2,7 +2,14 @@
 FROM node:18
 
 ARG HOSTNAME
+ARG PUBLIC_HOSTNAME
+ARG PUBLIC_API
+ARG PUBLIC_DOMAIN_BACK
+
 ENV HOSTNAME ${HOSTNAME}
+ENV PUBLIC_HOSTNAME ${PUBLIC_HOSTNAME}
+ENV PUBLIC_API_42 ${PUBLIC_API_42}
+ENV PUBLIC_DOMAIN_BACK ${PUBLIC_DOMAIN_BACK}
 
 WORKDIR /app
 
