--- a/backend/package.json
+++ b/backend/package.json
@@ -49,6 +49,7 @@
         "fastify-multipart": "^5.4.0",
         "md5": "^2.3.0",
         "multer": "^1.4.5-lts.1",
+        "node-fetch": "^2.6.12",
         "otplib": "^12.0.1",
         "pump": "^3.0.0",
         "qrcode": "^1.5.3",
