--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -11,7 +11,7 @@ ENV PUBLIC_HOSTNAME ${PUBLIC_HOSTNAME}
 ENV PUBLIC_API_42 ${PUBLIC_API_42}
 ENV PUBLIC_DOMAIN_BACK ${PUBLIC_DOMAIN_BACK}
 
-WORKDIR /app
+WORKDIR /appli
 
 # copy everything to the container
 
